--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
 
     - uses: actions-rs/cargo@v1
       with:
-        command: test -- --nocapture
+        command: test
+        args: -- --nocapture
 
     - name: Create Release
       id: create_release
